bin = [
    { name = "day1", path = "src/day1/day1.rs" },
    { name = "day2", path = "src/day2/day2.rs" },
    { name = "day3", path = "src/day3/day3.rs" },
    { name = "day4", path = "src/day4/day4.rs" },
]


[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"


[dependencies]
regex = "1.11.1"
